--- a/frontend/src/components/featured/featured.scss
+++ b/frontend/src/components/featured/featured.scss
@@ -11,56 +11,60 @@ $font-text: "Inika", serif;
   height: 100vh;
   background-color: #ffffff;
   opacity: 1;
-  background-image: linear-gradient(
-      30deg,
-      #fff9f3 12%,
-      transparent 12.5%,
-      transparent 87%,
-      #fff9f3 87.5%,
-      #fff9f3
-    ),
-    linear-gradient(
-      150deg,
-      #fff9f3 12%,
-      transparent 12.5%,
-      transparent 87%,
-      #fff9f3 87.5%,
-      #fff9f3
-    ),
-    linear-gradient(
-      30deg,
-      #fff9f3 12%,
-      transparent 12.5%,
-      transparent 87%,
-      #fff9f3 87.5%,
-      #fff9f3
-    ),
-    linear-gradient(
-      150deg,
-      #fff9f3 12%,
-      transparent 12.5%,
-      transparent 87%,
-      #fff9f3 87.5%,
-      #fff9f3
-    ),
-    linear-gradient(
-      60deg,
-      #fff9f377 25%,
-      transparent 25.5%,
-      transparent 75%,
-      #fff9f377 75%,
-      #fff9f377
-    ),
-    linear-gradient(
-      60deg,
-      #fff9f377 25%,
-      transparent 25.5%,
-      transparent 75%,
-      #fff9f377 75%,
-      #fff9f377
-    );
-  background-size: 20px 35px;
-  background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
+  // background-image: linear-gradient(
+  //     30deg,
+  //     #fff9f3 12%,
+  //     transparent 12.5%,
+  //     transparent 87%,
+  //     #fff9f3 87.5%,
+  //     #fff9f3
+  //   ),
+  //   linear-gradient(
+  //     150deg,
+  //     #fff9f3 12%,
+  //     transparent 12.5%,
+  //     transparent 87%,
+  //     #fff9f3 87.5%,
+  //     #fff9f3
+  //   ),
+  //   linear-gradient(
+  //     30deg,
+  //     #fff9f3 12%,
+  //     transparent 12.5%,
+  //     transparent 87%,
+  //     #fff9f3 87.5%,
+  //     #fff9f3
+  //   ),
+  //   linear-gradient(
+  //     150deg,
+  //     #fff9f3 12%,
+  //     transparent 12.5%,
+  //     transparent 87%,
+  //     #fff9f3 87.5%,
+  //     #fff9f3
+  //   ),
+  //   linear-gradient(
+  //     60deg,
+  //     #fff9f377 25%,
+  //     transparent 25.5%,
+  //     transparent 75%,
+  //     #fff9f377 75%,
+  //     #fff9f377
+  //   ),
+  //   linear-gradient(
+  //     60deg,
+  //     #fff9f377 25%,
+  //     transparent 25.5%,
+  //     transparent 75%,
+  //     #fff9f377 75%,
+  //     #fff9f377
+  //   );
+  // background-size: 20px 35px;
+  // background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
+  background-color: #ffffff;
+opacity: 0.8;
+background-size: 20px 20px;
+background-image:  repeating-linear-gradient(to right, #d7eebd, #d7eebd 1px, #ffffff 1px, #ffffff);
 
   .section-title {
     animation: slideDown 1s linear;
