--- a/frontend/src/components/gallery/gallery.scss
+++ b/frontend/src/components/gallery/gallery.scss
@@ -137,6 +137,17 @@ $font-text: "Inika", serif;
     align-items: center;
     position: relative;
 
+    &.placeholder {
+      background-color: #e0e0e0;
+      opacity: 0.5;
+      transition: opacity 1s ease-in-out;
+      .placeholder-content {
+        width: 100%;
+        height: 100%;
+        background-color: #ccc;
+      }
+    }
+
     .text-container {
       font-family: $font-text;
       opacity: 0;
