--- a/frontend/src/components/navigation/navigation.scss
+++ b/frontend/src/components/navigation/navigation.scss
@@ -18,6 +18,13 @@ ul {
         }
     }
     }
+
+    &.nav-dark-mode {
+        .nav-item {
+            color: white;
+        }
+    }
+
     .nav-item--active {
         font-weight: bold;
     }
